# llvm-bleach

./: CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  meson.build  snippy.nix
.github/workflows/: check.yaml  release.yaml
cmake/: version-utils.cmake
docs/: CMakeLists.txt  bleach-config-gen.md  bleach.md  mctomir.md
include/: CMakeLists.txt
include/bleach/: version.inc.in
include/bleach/compiler/: compiler.hpp
include/bleach/lifter/: block-ir-builder.hpp  instr-impl.h  instr-impl.hpp  lifter.hpp  redundant-branch-eraser.hpp
include/bleach/passes/: block-ir-builder.hpp  redundant-branch-eraser.hpp
include/mctomir/: elf-loader.h  mctomir-transform.h  symbols.h
lib/: CMakeLists.txt  meson.build
lib/compiler/: CMakeLists.txt  compiler.cpp
lib/lifter/: CMakeLists.txt  block-ir-builder.cpp  instr-impl.cpp  lifter.cpp  meson.build  redundant-branch-eraser.cpp  replace_ir_target.cmake  symtab-ir.h.in  symtab.cpp
lib/mctomir/: CMakeLists.txt  elf-loader.cpp  mctomir-transform.cpp  symbols.cpp
lib/passes/: CMakeLists.txt  block-ir-builder.cpp  redundant-branch-eraser.cpp
nix/: treefmt.nix
nix/pkgs/: Gemfile  default.nix  gemset.nix  riscv-db-skip-setup.patch  riscv-unified-db.nix
overlays/: llvm-install-target-headers.patch  snippy-fix-link-order.patch  snippy-install-target.patch
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  aarch64-single-mul-func.c  doubles-mixed.c  fact-local-var.c  fact.c  indbr.s  lit.cfg.py  lit.site.cfg.py.in  riscv-arith-sum.c  riscv-mixed-arithmetic-fpu.c  riscv-mixed-fp.c  riscv-mixed-precision-fp.c  single-mul-func.c
test/integration/inputs/: bleached-main-local-var.c  bleached-main.c  doubles-mixed-main.c  doubles-mixed.h  riscv-arith-sum.c  riscv-mixed-arithmetic-fpu.c  riscv-mixed-arithmetic-fpu.h  riscv-mixed-fp.c  riscv-mixed-fp.h  riscv-mixed-precision-fp.c  riscv-mixed-precision-fp.h  single-long-mul-func.c  single-mul-func.c
test/lib/: CMakeLists.txt
test/lib/lifter/: CMakeLists.txt  lifter.cpp  mf-helper.hpp
test/lib/lifter/inputs/: foo.mir
test/tools/: CMakeLists.txt
test/tools/clang-checker/: CMakeLists.txt  layout.yaml  valuegram.yaml
test/tools/config-gen/: CMakeLists.txt  append.test  integration.test  lit.cfg.py  lit.site.cfg.py.in  no-rv-template.test  templates-not-exist.test  unsupported-arch.test
test/tools/config-gen/inputs/: foo.mir  rv-append.yaml  slt.mir
test/tools/llvm-bleach/: CMakeLists.txt  const-reg.test  dump-input-mir.test  dump-instructions  dump-instructions.test  err-no-state-file.test  functions.test  ir-addsub.test  ir-logical-branches.test  ir-logical-cond-branches-no-blocks.test  ir-logical-cond-branches.test  ir-logical.test  lit.cfg.py  lit.site.cfg.py.in  loadsstores.test  main.test  many-branches-noinline.test  many-branches.test  no-fallthrough-branches.test  no-stack-loadstores.test  prefix.test  state-struct-fpu.test  state-struct.test
test/tools/llvm-bleach/arith-sum/: main.c  sum.c  translate.test
test/tools/llvm-bleach/fact/: fact.c  main.c  translate.test
test/tools/llvm-bleach/fact-mc/: bleached-main.c  main.c  translate.test
test/tools/llvm-bleach/fibonacci/: fibonacci.c  main.c  translate.test
test/tools/llvm-bleach/inputs/: addsub.yaml  const-reg.mir  foo-fpu-fadd.mir  foo.mir  foo32.mir  foo64.mir  functions.mir  instrs-fpu-regs.yaml  loadsstores.mir  logical-branches.mir  logical-cond-branches-no-blocks.mir  logical-cond-branches.mir  logical.mir  logical.yaml  main-ret-zero.mir  main42.mir  many-branches.mir  no-fallthrough-branches.mir  non-stack-loadstores.mir
test/tools/llvm-bleach/main-ret-42-mc/: bleached-main.c  main.c  riscv-fact-instructions.yaml  translate.test
test/tools/llvm-bleach/snippy/: layout.yaml  translate.test
test/tools/mctomir/: CMakeLists.txt  array-inc.c  call.c  conditional-branch-target.c  executable.c  foo.c  foobar.c  lit.cfg.py  lit.site.cfg.py.in  shared.c  symbols.c  void-call.c
test/tools/mctomir/inputs/: extract-value-and-size.sh  sum.sh
tools/: CMakeLists.txt  meson.build
tools/clang-checker/: CMakeLists.txt  README.md  clang-checker.sh  main-rv64.c  main.c  print.S
tools/config-gen/: CMakeLists.txt  config-gen.rb
tools/config-gen/templates/: aarch64.yaml  rv.yaml
tools/llvm-bleach/: CMakeLists.txt  llvm-bleach.cpp
tools/mctomir/: CMakeLists.txt  mctomir.cpp
