set(CLANG_CHECKER_DIR ${CMAKE_CURRENT_SOURCE_DIR})
install(
  FILES ${CLANG_CHECKER_DIR}/clang-checker.sh
  DESTINATION ${CMAKE_INSTALL_BINDIR}
  PERMISSIONS
    OWNER_READ
    OWNER_WRITE
    OWNER_EXECUTE
    GROUP_READ
    GROUP_EXECUTE
    WORLD_READ
    WORLD_EXECUTE
  RENAME clang-checker)
install(FILES ${CLANG_CHECKER_DIR}/main-rv64.c ${CLANG_CHECKER_DIR}/print.S
              ${CLANG_CHECKER_DIR}/main.c
        DESTINATION ${CMAKE_INSTALL_DATADIR}/clang-checker-sources)
